@@ -54,6 +54,7 @@
         <module>addons/storm-bridge-shim</module>
         <module>addons/trino-extractor</module>
         <module>atlas-examples</module>
+        <module>authn</module>
         <module>authorization</module>
         <module>build-tools</module>
         <module>client</module>
@@ -112,7 +113,8 @@
         <elasticsearch.version>7.17.8</elasticsearch.version>
         <entity.repository.impl>org.apache.atlas.repository.audit.InMemoryEntityAuditRepository</entity.repository.impl>
         <enunciate-maven-plugin.version>2.13.2</enunciate-maven-plugin.version>
-        <failsafe.version>2.18.1</failsafe.version>
+        <enunciate.config.relative>build-tools/src/main/resources/enunciate.xml</enunciate.config.relative>
+        <failsafe.version>3.5.3</failsafe.version>
         <falcon.version>0.8</falcon.version>
         <fastutil.version>6.5.16</fastutil.version>
         <graph.index.backend>solr</graph.index.backend>
@@ -128,14 +130,11 @@
         <httpcomponents-httpclient.version>4.5.13</httpcomponents-httpclient.version>
         <httpcomponents-httpcore.version>4.4.13</httpcomponents-httpcore.version>
         <ivy.version>2.5.2</ivy.version>
-        <jackson.databind.version>2.12.7</jackson.databind.version>
-        <jackson.version>2.12.7</jackson.version>
+        <jackson.databind.version>2.16.2</jackson.databind.version>
+        <jackson.version>2.16.2</jackson.version>
         <jacoco.version>0.8.13</jacoco.version>
         <janusgraph.cassandra.version>0.5.3</janusgraph.cassandra.version>
         <janusgraph.version>1.1.0</janusgraph.version>
-        <java.version.required>1.8</java.version.required>
-        <javac.source.version>1.8</javac.source.version>
-        <javac.target.version>1.8</javac.target.version>
         <javax-inject.version>1</javax-inject.version>
         <javax.persistence.version>2.2.1</javax.persistence.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
@@ -143,21 +142,25 @@
         <jersey-spring.version>1.19.4</jersey-spring.version>
         <jersey.version>1.19</jersey.version>
         <jettison.version>1.5.4</jettison.version>
-        <jetty-maven-plugin.stopWait>10</jetty-maven-plugin.stopWait>
+        <jetty-maven-plugin.stopWait>30</jetty-maven-plugin.stopWait>
         <jetty.version>9.4.56.v20240826</jetty.version>
         <joda-time.version>2.10.6</joda-time.version>
         <json-simple.version>1.1.1</json-simple.version>
         <json.version>3.2.11</json.version>
         <jsr.version>1.1</jsr.version>
         <junit.version>4.13.2</junit.version>
-        <kafka.scala.binary.version>2.12</kafka.scala.binary.version>
-        <kafka.version>2.8.2</kafka.version>
+        <kafka.scala.binary.version>2.13</kafka.scala.binary.version>
+        <kafka.version>3.9.1</kafka.version>
         <keycloak.version>6.0.1</keycloak.version>
         <logback.version>1.3.15</logback.version>
         <lucene-solr.version>8.11.3</lucene-solr.version>
+        <maven-compiler-version>3.11.0</maven-compiler-version>
         <maven-plugin-sortpom.version>3.0.1</maven-plugin-sortpom.version>
         <maven-site-plugin.version>3.7</maven-site-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <mockito.version>3.12.4</mockito.version>
         <netty.version>4.1.125.Final</netty.version>
+        <nimbus-jose-jwt.version>9.37.3</nimbus-jose-jwt.version>
         <node-for-v1.version>v22.14.0</node-for-v1.version>
         <node-for-v2.version>v12.16.0</node-for-v2.version>
         <npm-for-v1.version>10.9.2</npm-for-v1.version>
@@ -184,6 +187,7 @@
         <slf4j.version>2.0.16</slf4j.version>
         <solr-test-framework.version>8.11.3</solr-test-framework.version>
         <solr.version>8.11.3</solr.version>
+        <spotbugs-maven-plugin.version>4.4.2</spotbugs-maven-plugin.version>
         <spray.version>1.3.1</spray.version>
         <spring-ldap-core.version>2.4.4</spring-ldap-core.version>
         <spring.security.version>5.8.15</spring.security.version>
@@ -192,7 +196,7 @@
         <sqoop.version>1.4.7</sqoop.version>
         <storm.version>2.4.0</storm.version>
         <surefire.forkCount>2C</surefire.forkCount>
-        <surefire.version>3.0.0-M5</surefire.version>
+        <surefire.version>3.5.3</surefire.version>
         <testng.version>7.0.0</testng.version>
         <tinkerpop.version>3.7.5</tinkerpop.version>
         <woodstox-core.version>5.0.3</woodstox-core.version>
@@ -260,6 +264,12 @@
                         <artifactId>junit</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbus-jose-jwt.version}</version>
             </dependency>
 
             <dependency>
@@ -981,8 +991,8 @@
 
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.8.5</version>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -1094,17 +1104,13 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
+                    <version>${maven-compiler-version}</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>${maven-source-plugin.version}</version>
                 </plugin>
 
                 <plugin>
@@ -1156,9 +1162,9 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>findbugs-maven-plugin</artifactId>
-                    <version>3.0.5</version>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-maven-plugin</artifactId>
+                    <version>${spotbugs-maven-plugin.version}</version>
                 </plugin>
 
                 <!-- Source code metrics: mvn javancss:report or mvn site -->
@@ -1257,13 +1263,8 @@
                                     <message>** MAVEN VERSION ERROR ** Maven 3.5.0 or above is required. See https://maven.apache.org/install.html</message>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <level>ERROR</level>
-                                    <version>[1.8.0-151,)</version>
-                                    <message>** JAVA VERSION ERROR ** Java 8 (Update 151) or above is required.</message>
-                                </requireJavaVersion>
-                                <requireJavaVersion>
                                     <level>WARN</level>
-                                    <version>(,1.9]</version>
+                                    <version>(,17]</version>
                                     <message>** JAVA VERSION WARNING ** Java 9 and above has not been tested with Atlas.</message>
                                 </requireJavaVersion>
                             </rules>
@@ -1311,7 +1312,8 @@
                     <forkCount>${surefire.forkCount}</forkCount>
                     <reuseForks>false</reuseForks>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>${argLine} -Djava.awt.headless=true -Dproject.version=${project.version}
+                    <argLine>${jdk.argLine} ${argLine}
+                        -Djava.awt.headless=true -Dproject.version=${project.version}
                         -Dhadoop.tmp.dir="${project.build.directory}/tmp-hadoop-${user.name}"
                         -Xmx1024m -Djava.net.preferIPv4Stack=true ${atlas.surefire.options}</argLine>
                     <skip>${skipUTs}</skip>
@@ -1339,7 +1341,8 @@
                         <embedded.solr.directory>${project.basedir}/target</embedded.solr.directory>
                     </systemPropertyVariables>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>-Djava.awt.headless=true -Dproject.version=${project.version}
+                    <argLine>${jdk.argLine}
+                        -Djava.awt.headless=true -Dproject.version=${project.version}
                         -Dhadoop.tmp.dir="${project.build.directory}/tmp-hadoop-${user.name}"
                         -Xmx1024m ${atlas.surefire.options}</argLine>
                     <skip>${skipITs}</skip>
@@ -1348,6 +1351,13 @@
                     <forkCount>0</forkCount>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-testng</artifactId>
+                        <version>${failsafe.version}</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>integration-test</id>
@@ -1519,8 +1529,8 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
                 <configuration>
                     <!--debug>true</debug -->
                     <xmlOutput>true</xmlOutput>
@@ -1531,7 +1541,7 @@
                     <execution>
                         <id>findbugs-check</id>
                         <goals>
-                            <goal>check</goal>
+                            <goal>spotbugs</goal>
                         </goals>
                         <phase>verify</phase>
                     </execution>
@@ -1944,12 +1954,12 @@
             <id>kbhatt</id>
             <name>Keval Bhatt</name>
             <email>kbhatt@apache.org</email>
-            <organization>Freestone Infotech</organization>
+            <organization>Oracle America Inc</organization>
             <roles>
                 <role>committer</role>
                 <role>PMC</role>
             </roles>
-            <timezone>Asia/Kolkata</timezone>
+            <timezone>America/Los_Angeles</timezone>
         </developer>
         <developer>
             <id>madhan</id>
@@ -2313,6 +2323,35 @@
             </activation>
             <properties>
                 <skipDocs>false</skipDocs>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>jdk-17</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <enunciate-maven-plugin.version>2.15.0</enunciate-maven-plugin.version>
+                <enunciate.config.relative>build-tools/src/main/resources/enunciate-openapi3.xml</enunciate.config.relative>
+                <jdk.argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                    --add-opens=java.base/java.nio=ALL-UNNAMED</jdk.argLine>
+                <maven.compiler.source>17</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>jdk-8</id>
+            <activation>
+                <jdk>(,17)</jdk>
+            </activation>
+            <properties>
+                <jdk.argLine />
+                <maven.compiler.source>1.8</maven.compiler.source>
+                <maven.compiler.target>1.8</maven.compiler.target>
             </properties>
         </profile>
 
